--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
     <head>
         <title>My Site!</title>
+        <style>
+            h1 {
+                color: green;
+            }
+        </style>
     </head>
     <body>
-        <h1>This is my GitHub Pages website!</h1>
+        <h1>This is my GitHub Pages website! </h1>
     </body>
 </html>
