--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <style>
             h1 {
                 color: green;
+                border: 4px solid grey;
+                width: 1000px;
+                height: auto;
+                padding: 10px;
             }
         </style>
     </head>
