--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="viewpoint" content="width=device-width, initial-scale=1"> 
         <title>My Site!</title>
         <style>
             h1 {
