--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                 width: 1000px;
                 height: auto;
                 padding: 10px;
+                background: hotpink;
             }
         </style>
     </head>
