--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 width: 1000px;
                 height: auto;
                 padding: 10px;
-                background: hotpink;
+                background: red ;
             }
         </style>
     </head>
